--- a/.github/workflows/magento-package.yml
+++ b/.github/workflows/magento-package.yml
@@ -32,6 +32,7 @@ jobs:
           composer config --global repositories.amsi-corp-coding-standard git git@github.com:AssetMarketingServicesInc/ams-coding-standard.git
           composer config --global repositories.amsi-corp-magento-coding-standard git git@github.com:AssetMarketingServicesInc/magento-coding-standard.git
           composer config --global repositories.amsi-corp-module-shipping git git@github.com:AssetMarketingServicesInc/magento-module-shipping.git
+          composer config --global repositories.amsi-corp-module-nfusion-solutions git git@github.com:AssetMarketingServicesInc/magento-module-nfusion-solutions.git
 
       - name: Amasty composer config
         env:
