--- a/.github/workflows/magento-package.yml
+++ b/.github/workflows/magento-package.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Setup SSH Key
         run: mkdir -p ~/.ssh && chmod 0700 ~/.ssh && echo "${{ secrets.SSH }}" > ~/.ssh/id_ed25519 && chmod 600 ~/.ssh/id_ed25519
         
-      - name: Prefer PHP 7.4
-        run: sudo update-alternatives --install /usr/local/bin/php php /usr/bin/php7.4 1000
+      # - name: Prefer PHP 7.4
+      #   run: sudo update-alternatives --install /usr/local/bin/php php /usr/bin/php7.4 1000
 
       - name: Composer config
         run: |
