--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,1 @@
-*           @dfelton @itg-ddanielson
-/.github/*  @dfelton @itg-ddanielson
+*   @itg-ddanielson @pulmen @dfelton @odrais-amsicorp @meggauthier
