--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
-*           @dfelton @itg-ddanielson
-/.github/*  @dfelton @itg-ddanielson
+*   @itg-ddanielson @pulmen @dfelton @odrais-amsicorp @meggauthier
+/.github/*   @itg-ddanielson @pulmen @dfelton @odrais-amsicorp @meggauthier
