--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -14,4 +14,4 @@ jobs:
         run: tar -xf artifact-${{ github.sha }}.tgz && rm artifact-${{ github.sha }}.tgz
       
       - name: Execute PHPUnit
-        run: /usr/bin/php7.4 ./vendor/bin/phpunit Test
+        run: /usr/bin/php ./vendor/bin/phpunit Test
