--- a/.github/workflows/magento-package.yml
+++ b/.github/workflows/magento-package.yml
@@ -57,7 +57,7 @@ jobs:
             ${{ runner.os }}-composer-
 
       - name: Install Dependencies
-        run: composer install --prefer-dist --no-progress --no-ansi --no-interaction
+        run: composer install --prefer-dist --no-progress --no-ansi --no-interaction --no-plugins
         
       - name: Remove .git directory
         run: rm -rf .git/
