Remove deprecated ::set-output

--- a/.github/workflows/magento-package.yml
+++ b/.github/workflows/magento-package.yml
@@ -45,9 +45,8 @@ jobs:
       - name: Validate composer
         run: composer validate
 
-      - name: Get Composer Cache Directory
-        id: composer-cache
-        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+      - name: Set output
+        run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
 
       - uses: actions/cache@v3.2.3
         with:
