--- a/.github/workflows/magento-package.yml
+++ b/.github/workflows/magento-package.yml
@@ -30,6 +30,9 @@ jobs:
           composer config --global repositories.amsi-corp-magento-coding-standard git git@github.com:AssetMarketingServicesInc/magento-coding-standard.git
           composer config --global repositories.amsi-corp-module-shipping git git@github.com:AssetMarketingServicesInc/magento-module-shipping.git
           composer config --global repositories.amsi-corp-module-nfusion-solutions git git@github.com:AssetMarketingServicesInc/magento-module-nfusion-solutions.git
+          composer config --global repositories.amsi-corp-module-live-pricing git git@github.com:AssetMarketingServicesInc/magento-module-live-pricing.git
+          composer config --global repositories.amsi-corp-module-payment-discounts git git@github.com:AssetMarketingServicesInc/magento-module-live-payment-discounts.git
+          
 
       - name: Amasty composer config
         env:
