Remove unused repository references

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
-*   @itg-ddanielson @pulmen @dfelton @odrais-amsicorp @meggauthier
-/.github/*   @itg-ddanielson @pulmen @dfelton @odrais-amsicorp @meggauthier
+*   @odrais-amsicorp @jwalters-amsi
+/.github/*   @odrais-amsicorp @jwalters-amsi
