--- a/.github/workflows/magento-package.yml
+++ b/.github/workflows/magento-package.yml
@@ -13,6 +13,8 @@ on:
         required: true
       SSH:
         required: true
+      GH_TOKEN:
+        required: true
 
 jobs:
   build_magento_package:
@@ -23,11 +25,18 @@ jobs:
         run: mkdir -p ~/.ssh && chmod 0700 ~/.ssh && echo "${{ secrets.SSH }}" > ~/.ssh/id_ed25519 && chmod 600 ~/.ssh/id_ed25519
         
       - name: Composer config
+        env:
+          COMPOSER_AUTH: |
+            {
+              "github-oauth": {
+                "github.com": "${{ secrets.GH_TOKEN }}"
+              }
+            }
         run: |
           composer config --global http-basic.repo.magento.com ${{ secrets.REPO_MAGENTO_COM_USER }} ${{ secrets.REPO_MAGENTO_COM_PASSWORD }}
           composer config --global repositories.magento composer https://repo.magento.com
-          composer config --global repositories.amsi-corp-coding-standard git git@github.com:AssetMarketingServicesInc/ams-coding-standard.git
-          composer config --global repositories.amsi-corp-magento-coding-standard git git@github.com:AssetMarketingServicesInc/magento-coding-standard.git
+          composer config --global repositories.amsi-corp-coding-standard git https://github.com/AssetMarketingServicesInc/ams-coding-standard.git
+          composer config --global repositories.amsi-corp-magento-coding-standard git https://github.com/AssetMarketingServicesInc/magento-coding-standard.git
           
       - name: Amasty composer config
         env:
